// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem should render a Link and match snapshot 1`] = `
<Styled(Styled(Link))
  to="/augsburg/en/events/first_event"
>
  <styled.img
    alt=""
    src="thumbnail"
  />
  <styled.div>
    <styled.div>
      first Event
    </styled.div>
  </styled.div>
</Styled(Styled(Link))>
`;

exports[`ListItem should render an Anchor and match snapshot 1`] = `
<Styled(CleanAnchor)
  href="/augsburg/en/events/first_event"
>
  <styled.img
    alt=""
    src="thumbnail"
  />
  <styled.div>
    <styled.div>
      first Event
    </styled.div>
  </styled.div>
</Styled(CleanAnchor)>
`;
